--- a/Mobile/Live-Question.html
+++ b/Mobile/Live-Question.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
+
 
 
     <!--iphone+ 736(560)-->
@@ -132,35 +134,91 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-ckeditor">
 
-                <div class="item">
+                <div class="container" action="">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="ckeditor-group">
 
-                </div>
+                        <p class="topic">常见问题</p>
 
-                <div class="item">
+                        <p class="title1">关于账号问题</p>
 
-                    <img src="img/banner1.png" alt="">
+                        <p class="title2">如何注册？</p>
 
-                </div>
+                        <p class="detail">1. 请点击网站首页“免费开户”按钮，按照界面所规定的填写内容进行自助开户。</p>
 
-                <div class="item">
+                        <p class="detail">2. 联系在线客服提供您想要开通的会员账号，即可开出会员账号。</p>
 
-                    <img src="img/banner1.png" alt="">
+                        <p class="title2">忘记账号/密码怎么办？</p>
 
-                </div>
+                        <p class="detail">答：请告知我们的客服 , 将有专人直接处理 , 并于确认帐号真实与安全性后协助设置新密码。</p>
 
-            </section>
+                        <p class="title2">怎么存款？</p>
 
-            <section class="sect-game-list jq-sect-game-list">
+                        <p class="detail">答：我们提供多种便捷和安全的存款方式，您可以选择一种您喜欢的存款方式。</p>
 
-                <div class="container">
+                        <p class="title2">最高和最低存款要求？</p>
 
-                    <p class="title">热门游戏推荐</p>
+                        <p class="detail">答：乐鼎娱乐最低的存款金额是10元，最高存款金额无上限。</p>
 
-                    <div class="list-group clear"></div>
+                        <p class="title2">存款手续费？</p>
+
+                        <p class="detail">答：您可以通过网银转账、ATM柜员机、银行柜台、电话转账、支付宝或者微信支付等方式进行存款，如果您是属于银行转账存款的话，银行是会收取您汇款手续费的，如果您是使用网银在线支付存款的话，无任何存款手续费。</p>
+
+                        <p class="title2">单日最高提款限额？</p>
+
+                        <p class="detail">答：单日最高提款限额为500万元人民币 每个账户每日提款次数不受限制. 您申请取款500万元，在银行工作时间(北京时间周一到周五9:00-17:00)内的取款一律1小时内内到账；银行工作时间外(周末/节假日/非正常工作时间)，
+                            其中200万以内的取款承诺2小时内支付，余款将于第二天11:00前完成支付。
+
+                        </p>
+
+                        <p class="title2">取款有手续费吗？</p>
+
+                        <p class="detail">答：乐鼎娱乐取款无任何手续费，每天的取款次数不限，取款都会在1小时内支付到账。</p>
+
+                        <p class="title2">存款未投注可以提款吗？</p>
+
+                        <p class="detail">答：由于我们是菲律宾合法注册的网站，受当地政府监管及“反洗钱法”的约束，您存款不投注是无法申请取款的,取款前只需您的有效投注额达到存款金额的60%的流水即可取款。</p>
+
+                        <p class="title2">是否自助修改密码？</p>
+
+                        <p class="detail">答：请您在首页上方登录后，点击“会员中心”-“密码管理”修改成方便您记忆的密码。</p>
+
+                        <p class="title2">如何自助绑定取款银行账号？</p>
+
+                        <p class="detail">答：请您在首页登录后,点击“会员中心”-“银行资料”进行绑定银行资料。建议您绑定工行，农行，建行，交行或者是招行的借记卡。</p>
+
+                        <p class="title1">安全性问题</p>
+
+                        <p class="title2">你们公司是合法的吗？</p>
+
+                        <p class="detail">答：乐鼎娱乐取得了菲律宾政府唯一认可的发牌及监管单位First Cagayan Leisure and Resort Corporation (FCLRC) 和 Cagayan Economic
+                            Zone Authority (CEZA) 联合颁发的运营牌照。FCLRC是一家位于Cagayan特别经济区和自由口岸(CSEZFP)的机构，严格要求持牌公司必须使用经批准软件，并定时审查各公司的运作情况，确保客户使用的平台达到公平及安全的要求，保证客户与公司之间的公平与公正。该牌照保证了运营的合法性和公正性。</p>
+
+                        <p class="title2">忘记密码或账号被盗，账号资金是否安全？</p>
+
+                        <p class="detail">答：为了防止账号遗失，请您把密码设置更复杂并定期更换密码；请避免在公共电脑（网吧及宾馆）进行游戏。如忘记密码请及时联系7*24小时客服找回。 我们对会员账号姓名与取款银行账号姓名进行了绑定，别人要提款也只能提到会员本人的银行卡上，所以您的账号资金是安全的。</p>
+
+                        <p class="title2">如何清除浏览器缓存？</p>
+
+                        <p class="detail">答：请在网站最上方，鼠标移到工具选项，下拉页面找寻“清除缓存”按钮，点击后自动下载“清除缓存”软件，开启软件后系统将自动为您清除您的浏览器缓存，让您更快速访问网站。</p>
+
+                        <p class="title1">游戏类问题</p>
+
+                        <p class="title2">如何登录?</p>
+
+                        <p class="detail">答：在网站首页右上方会员登录框中,输入您的会员账户、密码,点击登录,根据您的喜好在导航上选择您喜欢的游戏品种进行投注。</p>
+
+                        <p class="title2">没有视频怎么办？</p>
+
+                        <p class="detail">答：游戏赌桌界面都有提供不同的视讯线路，当视频卡或显示加载中时，请点击"视讯线路选择"（不同游戏厅按钮位置不同）进行切换，改善视频流畅度。</p>
+
+                        <p class="title2">下注成功后断线怎么办？</p>
+
+                        <p class="detail">答：如在下注时您的网络突然中断，已经确定的注单将仍然生效。系统会根据当局实际开牌结果进行派彩；当您重新登陆账户时，请您核实游戏下注记录，余额及游戏开牌结果等，如有任何疑虑请随时联系客服确认。</p>
+
+                    </div>
 
                 </div>
 
@@ -239,8 +297,6 @@
             </li>
 
         </ul>
-
-
 
         <div class="pop-window jq-pop-window">
 
@@ -546,115 +602,18 @@
 
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
+
         <script src="/js/main.js"></script>
 
         <script>
             Live.Global.intital();
 
+            Live.Global.notice_event();
+
             Live.Global.owl_banner();
-        </script>
 
-        <script>
-            // Privity
-
-            $(window).load(function () {
-
-                $.ajax({
-
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
-
-                    type: "GET",
-
-                    success: function (data) {
-
-                        var _each = $(".jq-sect-game-list").find('.list-group');
-
-                        var _length = data.body.list.length;
-
-                        if (data.status) {
-
-                            switch (data.status) {
-
-                                case 100:
-
-                                    for (i = 0; i < _length; i++) {
-
-                                        _each.append(
-
-                                            '<div class="col-xs-12">' +
-
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
-
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
-
-                                        )
-
-                                    }
-
-                                    break;
-
-                            }
-
-                        }
-
-                    }
-
-                });
-
-            });
-
-
-
-            $(document).on('click', '.ajax-game-link', function () {
-
-                var _key = $(this).attr('data-game-code');
-
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-
-                    alert('请先登入会员');
-
-                } else {
-
-                    $.ajax({
-
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
-
-                        type: "GET",
-
-                        success: function (data) {
-
-                            if (data.status) {
-
-                                switch (data.status) {
-
-                                    case 100:
-
-                                        window.location.href = data.body.game_url;
-
-                                        break;
-
-                                }
-
-                            }
-
-                        }
-
-                    });
-
-                }
-
-            });
+            Live.Global.datepicker();
         </script>
 
     </div>
