--- a/Mobile/Member-Password.html
+++ b/Mobile/Member-Password.html
@@ -132,35 +132,263 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>提款</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue active">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="member-detail-tag clear">
+
+                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag active" data-password="user">登入密码变更</a>
+
+                            <a href="javascript:void(0)" class="col-xs-6 jq-member-tag" data-password="cash">资金密码变更</a>
+
+                        </div>
+
+                        <div class="container password jq-user-password">
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入旧密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="userpasswd" placeholder="请输入旧密码">
+
+                                    </div>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="new-userpasswd" placeholder="请输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">再次输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="new-userpasswd-check" placeholder="再次输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-btn-userpassword" type="button" value="确认变更">
+
+                            </div>
+
+                        </div>
+
+                        <div class="container password jq-user-cashpassword-first" style="display: none;">
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="cashpasswd" placeholder="请输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">再次输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="cashpasswd-check" placeholder="再次输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-btn-cashpassword-first" type="button" value="设定密码">
+
+                            </div>
+
+                        </div>
+
+                        <div class="container password jq-user-cashpassword" style="display: none;">
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入旧密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="cashpasswd" placeholder="请输入旧密码">
+
+                                    </div>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="new-cashpasswd" placeholder="请输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">再次输入新密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="new-cashpasswd-check" placeholder="再次输入新密码">
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-btn-cashpassword" type="button" value="确认变更">
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -551,25 +779,25 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
         <script>
             // Privity
 
-            $(window).load(function () {
+            $('[data-password=cash]').click(function () {
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
 
                     type: "GET",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
-
-                        var _length = data.body.list.length;
+                        var _key = data.body.isSet;
 
                         if (data.status) {
 
@@ -577,27 +805,17 @@
 
                                 case 100:
 
-                                    for (i = 0; i < _length; i++) {
+                                    if (_key == 0) {
 
-                                        _each.append(
+                                        $('.jq-user-cashpassword').hide();
 
-                                            '<div class="col-xs-12">' +
+                                        $('.jq-user-cashpassword-first').show();
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
+                                    } else if (_key == 1) {
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
+                                        $('.jq-user-cashpassword').show();
 
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
-
-                                        )
+                                        $('.jq-user-cashpassword-first').hide();
 
                                     }
 
@@ -613,26 +831,33 @@
 
             });
 
+            $('.ajax-btn-userpassword').click(function () {
 
+                var _passwd = $('.jq-user-password').find('[name=userpasswd]').val();
 
-            $(document).on('click', '.ajax-game-link', function () {
+                var _new_passwd = $('.jq-user-password').find('[name=new-userpasswd]').val();
 
-                var _key = $(this).attr('data-game-code');
+                var _check_passwd = $('.jq-user-password').find('[name=new-userpasswd-check]').val();
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-
-                    alert('请先登入会员');
-
-                } else {
+                if (_new_passwd == _check_passwd) {
 
                     $.ajax({
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                        url: "/api/Api/setUserPassword?sess=" + sessionStorage.session,
 
-                        type: "GET",
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            passwd: _new_passwd,
+
+                            oldpasswd: _passwd
+
+                        }),
 
                         success: function (data) {
+
+                            var _key = data.body.isSet;
 
                             if (data.status) {
 
@@ -640,9 +865,11 @@
 
                                     case 100:
 
-                                        window.location.href = data.body.game_url;
+                                        alert('修改成功，下次请使用新密码登入');
 
-                                        break;
+                                    case '999':
+
+                                        alert(data.message);
 
                                 }
 
@@ -651,6 +878,124 @@
                         }
 
                     });
+
+                } else {
+
+                    alert('密码输入不一致，请重新输入');
+
+                }
+
+            });
+
+            $('.ajax-btn-cashpassword-first').click(function () {
+
+                var _passwd = $('.jq-user-cashpassword-first').find('[name=cashpasswd]').val();
+
+                var _check_passwd = $('.jq-user-cashpassword-first').find('[name=cashpasswd-check]').val();
+
+                if (_passwd == _check_passwd) {
+
+                    $.ajax({
+
+                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            passwd: _passwd
+
+                        }),
+
+                        success: function (data) {
+
+                            var _key = data.body.isSet;
+
+                            if (data.status) {
+
+                                switch (data.status) {
+
+                                    case 100:
+
+                                        alert('资金密码设定完成');
+
+                                    case '999':
+
+                                        alert(data.message);
+
+                                }
+
+                            }
+
+                        }
+
+                    });
+
+                } else {
+
+                    alert('密码输入不一致，请重新输入');
+
+                }
+
+            });
+
+            $('.ajax-btn-cashpassword').click(function () {
+
+                var _passwd = $('.jq-user-cashpassword').find('[name=cashpasswd]').val();
+
+                var _new_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd]').val();
+
+                var _check_passwd = $('.jq-user-cashpassword').find('[name=new-cashpasswd-check]').val();
+
+                console.log(_passwd);
+
+                console.log(_new_passwd);
+
+                console.log(_check_passwd);
+
+                if (_new_passwd == _check_passwd) {
+
+                    $.ajax({
+
+                        url: "/api/Api/setUserMoneyPassword?sess=" + sessionStorage.session,
+
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            passwd: _new_passwd,
+
+                            oldpasswd: _passwd
+
+                        }),
+
+                        success: function (data) {
+
+                            var _key = data.body.isSet;
+
+                            if (data.status) {
+
+                                switch (data.status) {
+
+                                    case 100:
+
+                                        alert('资金密码修改成功，下次请使用新密码');
+
+                                    case '999':
+
+                                        alert(data.message);
+
+                                }
+
+                            }
+
+                        }
+
+                    });
+
+                } else {
+
+                    alert('密码输入不一致，请重新输入');
 
                 }
 
