--- a/Mobile/Member-Apply-Discount.html
+++ b/Mobile/Member-Apply-Discount.html
@@ -132,35 +132,143 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>提款</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue active">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <form class="container" action="">
+
+                            <div class="row">
+
+                                <div class="select-group-container clear">
+
+                                    <p class="title">优惠类型</p>
+
+                                    <div class="select-group">
+
+                                        <select class="select" name="apply-discount"></select>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-btn-apply-discount" type="button" value="送出申请">
+
+                            </div>
+
+                        </form>
+
+                    </div>
 
                 </div>
 
@@ -551,6 +659,8 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
@@ -561,13 +671,15 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
 
                     type: "GET",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        console.log(data.body.list);
+
+                        var _each = $("[name=apply-discount]");
 
                         var _length = data.body.list.length;
 
@@ -581,21 +693,9 @@
 
                                         _each.append(
 
-                                            '<div class="col-xs-12">' +
+                                            '<option value="' + data.body.list[i].d_id + '">' +
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
-
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
+                                            data.body.list[i].d_name + '</option>'
 
                                         )
 
@@ -613,46 +713,45 @@
 
             });
 
+            $('.ajax-btn-apply-discount').click(function () {
 
+                var _d_id = $("[name=apply-discount]").val();
 
-            $(document).on('click', '.ajax-game-link', function () {
+                $.ajax({
 
-                var _key = $(this).attr('data-game-code');
+                    url: "/api/Api/setDiscountFrom?sess=" + sessionStorage.session,
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                    type: "POST",
 
-                    alert('请先登入会员');
+                    data: JSON.stringify({
 
-                } else {
+                        d_id: _d_id,
 
-                    $.ajax({
+                    }),
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                    success: function (data) {
 
-                        type: "GET",
+                        if (data.status) {
 
-                        success: function (data) {
+                            switch (data.status) {
 
-                            if (data.status) {
+                                case 100:
 
-                                switch (data.status) {
+                                    alert('优惠设定成功');
 
-                                    case 100:
+                                    break;
 
-                                        window.location.href = data.body.game_url;
+                                case '999':
 
-                                        break;
-
-                                }
+                                    alert(data.message);
 
                             }
 
                         }
 
-                    });
+                    }
 
-                }
+                });
 
             });
         </script>
