--- a/Mobile/Member-Balance.html
+++ b/Mobile/Member-Balance.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
+
 
 
     <!--iphone+ 736(560)-->
@@ -132,35 +134,209 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>余额查询</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue active">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container" action="">
+
+                            <div class="row" style="border-bottom: none;">
+
+                                <div class="confirm-group-container jq-row-game clear">
+
+                                    <p class="title">游戏厅总额度</p>
+
+                                    <p class="detail jq-balance-num"></p>
+
+                                </div>
+
+                                <div class="confirm-group-container jq-row-account clear">
+
+                                    <p class="title">本地额度</p>
+
+                                    <p class="detail jq-balance-num"></p>
+
+                                </div>
+
+                                <!-- <div class="member-table">
+
+                                    <div class="thead">
+
+                                        <div class="tr">
+
+                                            <div class="th">游戏名称</div>
+
+                                            <div class="th">余额</div>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tbody">
+
+                                        <div class="tr">
+
+                                            <div class="td" data-title="游戏名称">---</div>
+
+                                            <div class="td" data-title="余额">50000</div>
+
+                                        </div>
+
+                                        <div class="tr">
+
+                                            <div class="td" data-title="游戏名称">---</div>
+
+                                            <div class="td" data-title="余额">50000</div>
+
+                                        </div>
+
+                                        <div class="tr">
+
+                                            <div class="td" data-title="游戏名称">---</div>
+
+                                            <div class="td" data-title="余额">50000</div>
+
+                                        </div>
+
+                                        <div class="tr">
+
+                                            <div class="td" data-title="游戏名称">---</div>
+
+                                            <div class="td" data-title="余额">50000</div>
+
+                                        </div>
+
+                                        <div class="tr">
+
+                                            <div class="td" data-title="游戏名称">---</div>
+
+                                            <div class="td" data-title="余额">50000</div>
+
+                                        </div>
+
+                                    </div>
+
+                                </div> -->
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <a class="btn btn-bg-blue" href="/Member-Deposit.html">前往充值</a>
+
+                                <a class="btn btn-bg-blue" href="/Member-Transfer.html">前往转帐</a>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -546,114 +722,52 @@
 
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
+
         <script src="/js/main.js"></script>
 
         <script>
             Live.Global.intital();
 
             Live.Global.owl_banner();
+
+            Live.Global.member();
+
+            Live.Global.datepicker();
         </script>
 
         <script>
             // Privity
 
             $(window).load(function () {
-
                 $.ajax({
-
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
-
+                    url: "http://ldyllive.com/api/Api/withdrawalForm?sess=" + sessionStorage.session,
                     type: "GET",
-
                     success: function (data) {
-
-                        var _each = $(".jq-sect-game-list").find('.list-group');
-
-                        var _length = data.body.list.length;
-
                         if (data.status) {
-
                             switch (data.status) {
-
                                 case 100:
-
-                                    for (i = 0; i < _length; i++) {
-
-                                        _each.append(
-
-                                            '<div class="col-xs-12">' +
-
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
-
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
-
-                                        )
-
-                                    }
-
+                                    var _each = $(".jq-row-account").find('.jq-balance-num');
+                                    _each.html(data.body.balance);
                                     break;
-
                             }
-
                         }
-
                     }
-
                 });
-
-            });
-
-
-
-            $(document).on('click', '.ajax-game-link', function () {
-
-                var _key = $(this).attr('data-game-code');
-
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-
-                    alert('请先登入会员');
-
-                } else {
-
-                    $.ajax({
-
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
-
-                        type: "GET",
-
-                        success: function (data) {
-
-                            if (data.status) {
-
-                                switch (data.status) {
-
-                                    case 100:
-
-                                        window.location.href = data.body.game_url;
-
-                                        break;
-
-                                }
-
+                $.ajax({
+                    url: "http://ldyllive.com/api/Api/getThirdBlance?sess=" + sessionStorage.session,
+                    type: "GET",
+                    success: function (data) {
+                        if (data.status) {
+                            switch (data.status) {
+                                case 100:
+                                    var _each = $(".jq-row-game").find('.jq-balance-num');
+                                    _each.html(data.body.balance);
+                                    break;
                             }
-
                         }
-
-                    });
-
-                }
-
+                    }
+                });
             });
         </script>
 
