--- a/Mobile/Member-CardManagement.html
+++ b/Mobile/Member-CardManagement.html
@@ -132,35 +132,201 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>银行卡管理</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue active">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container jq-container-step1">
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入资金密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="cashpassword" placeholder="请输入资金密码">
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-cashpassword-submit" type="button" value="提交">
+
+                            </div>
+
+                        </div>
+
+                        <div class="container jq-container-step2" style="display: none;">
+
+                            <div class="row" style="border-bottom: none;">
+
+                                <div class="member-table">
+
+                                    <div class="thead">
+
+                                        <div class="tr">
+
+                                            <div class="th">开户名</div>
+
+                                            <div class="th">开户行</div>
+
+                                            <div class="th">卡号</div>
+
+                                            <div class="th">绑定时间</div>
+
+                                            <div class="th">操作</div>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tbody jq-tbody"></div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue jq-btn-card-add jq-cancelBubble" type="button" value="增加绑定">
+
+                                <input class="btn btn-bg-blue jq-btn-card-lock jq-cancelBubble" type="button" value="锁定银行卡">
+
+                            </div>
+
+                            <div class="warning">
+
+                                <p>一个银行帐户最多只能绑定
+
+                                    <span class="color-red">5</span> 张银行卡</p>
+
+                                <p>
+
+                                    <span class="color-red">银行卡锁定</span>可以增强帐户安全，推荐锁定(如：帐户被他人盗用后，由于锁定的限制，您帐户的资金不会被他人提款)</p>
+
+                                <p>银行卡锁定后，
+
+                                    <span class="color-red">不能增加新银行卡绑定，自身不能解绑和解锁银行卡，联系在线客服申请解锁</span>
+
+                                </p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -546,30 +712,42 @@
 
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+        <script src="lib/address.js"></script>
+
         <script src="/js/main.js"></script>
 
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
+
+            new PCAS("P1", "C1");
         </script>
 
         <script>
             // Privity
 
-            $(window).load(function () {
+            var _bank_id = 1
+
+            var delete_key
+
+            function bankInfor() {
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/setUserBankInfoForm?sess=" + sessionStorage.session +
+
+                        "&p=1&limit=5",
 
                     type: "GET",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        var _each = $(".jq-tbody");
 
-                        var _length = data.body.list.length;
+                        var _length = data.body.list.user_bank_list.length;
 
                         if (data.status) {
 
@@ -581,19 +759,31 @@
 
                                         _each.append(
 
-                                            '<div class="col-xs-12">' +
+                                            '<div class="tr">' +
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
+                                            '<div class="td" data-title="开户名">' + data.body.list
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
+                                            .user_bank_list[i].ub_account_name + '</div>' +
 
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
+                                            '<div class="td" data-title="开户行">' + data.body.list
 
-                                            '</a>' +
+                                            .user_bank_list[i].ub_branch_name + '</div>' +
+
+                                            '<div class="td jq-aaa" data-title="卡号">' + data.body
+
+                                            .list.user_bank_list[i].ub_account + '</div>' +
+
+                                            '<div class="td" data-title="绑定时间">' + data.body.list
+
+                                            .user_bank_list[i].ub_add_datetime + '</div>' +
+
+                                            '<div class="td td-action" data-title="操作">' +
+
+                                            '<a class="ajax-btn-bankcard-delete" href="javascript:void(0)" data-ub-id="' +
+
+                                            data.body.list.user_bank_list[i].ub_id + '">删除</a>' +
+
+                                            '</div>' +
 
                                             '</div>'
 
@@ -611,28 +801,173 @@
 
                 });
 
-            });
+            }
+
+            function banklock() {
+
+                $('[data-btn-true-false]').click(function () {
+
+                    var key = $(this).attr('data-btn-true-false');
+
+                    if (key == 'true') {
+
+                        $.ajax({
+
+                            url: "/api/Api/lockUserBankCard?sess=" + sessionStorage
+
+                                .session,
+
+                            type: "GET",
+
+                            success: function (data) {
+
+                                if (data.status) {
+
+                                    switch (data.status) {
+
+                                        case 100:
+
+                                            alert('银行卡已锁定');
+
+                                            window.location.reload();
+
+                                            break;
+
+                                    }
+
+                                }
+
+                            }
+
+                        });
+
+                    } else if (key == 'false') {
+
+                        $('.jq-pop-window').removeClass('active');
+
+                        $('.jq-pop-true-false').removeClass('active');
+
+                        $('.jq-pop-true-false').find('.jq-title').empty();
+
+                        $('.jq-pop-true-false').find('.jq-detail').empty();
+
+                    }
+
+                });
+
+            }
+
+            function bankdelete(num) {
+
+                $('[data-btn-true-false]').click(function () {
+
+                    var key = $(this).attr('data-btn-true-false');
+
+                    if (key == 'true') {
+
+                        $.ajax({
+
+                            url: "/api/Api/delUserBankCard?sess=" + sessionStorage
+
+                                .session,
+
+                            type: "POST",
+
+                            data: JSON.stringify({
+
+                                ub_id: num
+
+                            }),
+
+                            success: function (data) {
+
+                                console.log(data);
+
+                                if (data.status) {
+
+                                    switch (data.status) {
+
+                                        case 100:
+
+                                            alert('银行卡已删除');
+
+                                            delete_key.parents('.tr').remove();
+
+                                            window.location.reload();
+
+                                            break;
+
+                                    }
+
+                                }
+
+                            }
+
+                        });
+
+                    } else if (key == 'false') {
+
+                        $('.jq-pop-window').removeClass('active');
+
+                        $('.jq-pop-true-false').removeClass('active');
+
+                        $('.jq-pop-true-false').find('.jq-title').empty();
+
+                        $('.jq-pop-true-false').find('.jq-detail').empty();
+
+                    }
+
+                });
+
+            }
 
 
 
-            $(document).on('click', '.ajax-game-link', function () {
+            $('.ajax-btn-bankcard').click(function () {
 
-                var _key = $(this).attr('data-game-code');
+                var _account_name = $('.jq-pop-bankcard').find('[name="account_name"]').val();
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                var _account = $('.jq-pop-bankcard').find('[name="account"]').val();
 
-                    alert('请先登入会员');
+                var _account_check = $('.jq-pop-bankcard').find('[name="account_check"]').val();
 
-                } else {
+                var _branch_name = $('.jq-pop-bankcard').find('[name="branch_name"]').val();
+
+                var _province = $('.jq-pop-bankcard').find('#province').val();
+
+                var _city = $('.jq-pop-bankcard').find('#city').val();
+
+                console.log(_account, _account_name, _branch_name, _province, _city);
+
+                if (_account == _account_check) {
 
                     $.ajax({
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                        url: "/api/Api/setUserBankInfo?sess=" + sessionStorage.session,
 
-                        type: "GET",
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            account_name: _account_name, // 帳戶名稱
+
+                            account: _account, // 銀行帳號
+
+                            bank_id: _bank_id,
+
+                            branch_name: _branch_name, // 分行名稱
+
+                            province: _province, // 省份
+
+                            city: _city // 地區
+
+                        }),
 
                         success: function (data) {
+
+                            console.log(data)
+
+                            console.log(_bank_id)
 
                             if (data.status) {
 
@@ -640,7 +975,17 @@
 
                                     case 100:
 
-                                        window.location.href = data.body.game_url;
+                                        alert(data.message);
+
+                                        _bank_id += 1;
+
+                                        window.location.reload();
+
+                                        break;
+
+                                    case '999':
+
+                                        alert(data.message);
 
                                         break;
 
@@ -652,12 +997,132 @@
 
                     });
 
+                } else {
+
+                    alert('银行帐号不一致，请重新输入')
+
                 }
 
             });
-        </script>
 
-    </div>
+            $('.jq-btn-card-lock').click(function () {
+
+                $('.jq-pop-window').addClass('active');
+
+                $('.jq-pop-true-false').addClass('active');
+
+                $('.jq-pop-true-false').find('.jq-title').html('锁定银行卡');
+
+                $('.jq-pop-true-false').find('.jq-detail').html(
+
+                    '银行卡锁定可增强帐户安全，锁定后不能增加新银行卡绑定，自身不能解绑和解锁银行卡，如需解锁请联系在线客服申请');
+
+                banklock();
+
+            });
+
+            $(document).on('click', '.ajax-btn-bankcard-delete', function () {
+
+                delete_key = $(this)
+
+                delete_key2 = $(this).attr('data-ub-id');
+
+                $('.jq-pop-window').addClass('active');
+
+                $('.jq-pop-true-false').addClass('active');
+
+                $('.jq-pop-true-false').find('.jq-title').html('删除讯息');
+
+                $('.jq-pop-true-false').find('.jq-detail').html('是否确认删除此笔银行卡资讯');
+
+                bankdelete(delete_key2);
+
+            });
+
+
+
+            // CashCheck
+
+            function cashpassword_check(_passwd) {
+
+                $.ajax({
+
+                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+
+                    type: "POST",
+
+                    data: JSON.stringify({
+
+                        passwd: _passwd,
+
+                    }),
+
+                    success: function (data) {
+
+                        if (data.status) {
+
+                            switch (data.status) {
+
+                                case 100:
+
+                                    alert('驗證成功');
+
+                                    $('.jq-container-step1').hide();
+
+                                    $('.jq-container-step2').show();
+
+                                    bankInfor()
+
+                                    break;
+
+                                case '999':
+
+                                    alert('密碼驗證失敗，請重新輸入');
+
+                            }
+
+                        }
+
+                    }
+
+                });
+
+            };
+
+
+
+            $(window).load(function () {
+
+                $.ajax({
+
+                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+
+                    type: "GET",
+
+                    success: function (data) {
+
+                        if (data.body.isSet == 0) {
+
+                            $('.jq-pop-window').addClass('active');
+
+                            $('.jq-pop-cash-password').addClass('active');
+
+                        }
+
+                    }
+
+                });
+
+            });
+
+            $('.ajax-cashpassword-submit').click(function () {
+
+                var cash_key = $('[name=cashpassword]').val();
+
+                cashpassword_check(cash_key);
+
+            });
+        </script>
 
 </body>
 
