--- a/Mobile/Member-CashRecord.html
+++ b/Mobile/Member-CashRecord.html
@@ -22,6 +22,8 @@
 
     <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
 
+    <link rel="stylesheet" href="lib/jquery-ui/jquery-ui.min.css">
+
 
 
     <!--iphone+ 736(560)-->
@@ -132,35 +134,179 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>银行卡管理</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue active">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container" action="">
+
+                            <div class="row" style="border-bottom: none;">
+
+                                <div class="member-table-action">
+
+                                    <div class="option-group-container clear">
+
+                                        <p class="title">纪录类型</p>
+
+                                        <a href="javascript:void(0)" class="option jq-member-option active">AG</a>
+
+                                    </div>
+
+                                    <div class="date-group-container jq-date-group-container clear">
+
+                                        <div class="inner">
+
+                                            <input type="text" id="from" name="from" placeholder="起始时间">
+
+                                            <input type="text" id="to" name="to" placeholder="结束时间">
+
+                                            <a class="btn btn-bg-blue ajax-btn-cash-time" href="javascript:void(0)">
+
+                                                <i class="icon-ic-search"></i>
+
+                                                <span>搜寻</span>
+
+                                            </a>
+
+                                        </div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="member-table" data-daily-table='1'>
+
+                                    <div class="thead">
+
+                                        <div class="tr">
+
+                                            <div class="th">日期</div>
+
+                                            <div class="th">游戏编号</div>
+
+                                            <div class="th">游戏类别</div>
+
+                                            <div class="th">下注金额</div>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tbody"></div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -546,93 +692,42 @@
 
         <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
+        <script src="lib/jquery-ui/jquery-ui.min.js"></script>
+
         <script src="/js/main.js"></script>
 
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
+
+            Live.Global.datepicker();
         </script>
 
         <script>
             // Privity
 
-            $(window).load(function () {
+            function cash_change(_start_type, _end_type) {
 
-                $.ajax({
-
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
-
-                    type: "GET",
-
-                    success: function (data) {
-
-                        var _each = $(".jq-sect-game-list").find('.list-group');
-
-                        var _length = data.body.list.length;
-
-                        if (data.status) {
-
-                            switch (data.status) {
-
-                                case 100:
-
-                                    for (i = 0; i < _length; i++) {
-
-                                        _each.append(
-
-                                            '<div class="col-xs-12">' +
-
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
-
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
-
-                                        )
-
-                                    }
-
-                                    break;
-
-                            }
-
-                        }
-
-                    }
-
-                });
-
-            });
+                $("[data-daily-table]").find('.tbody').find('.tr').remove();
 
 
 
-            $(document).on('click', '.ajax-game-link', function () {
-
-                var _key = $(this).attr('data-game-code');
-
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-
-                    alert('请先登入会员');
-
-                } else {
+                if (_start_type == undefined || _end_type == undefined) {
 
                     $.ajax({
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                        url: "/api/Api/getThirdBetByUser?sess=" + sessionStorage.session,
 
                         type: "GET",
 
                         success: function (data) {
+
+                            var _each = $("[data-daily-table=1]").find('.tbody');
+
+                            var _length = data.body.list.length;
 
                             if (data.status) {
 
@@ -640,7 +735,85 @@
 
                                     case 100:
 
-                                        window.location.href = data.body.game_url;
+                                        for (i = 0; i < _length; i++) {
+
+                                            _each.append(
+
+                                                '<div class="tr">' +
+
+                                                '<div class="td" data-title="日期">' + data.body.list[i].transactionTime +
+                                                '</div>' +
+
+                                                '<div class="td" data-title="游戏编号">' + data.body.list[i]
+                                                .gameCode + '</div>' +
+
+                                                '<div class="td" data-title="游戏类别">' + data.body.list[i]
+                                                .gameCategory + '</div>' +
+
+                                                '<div class="td" data-title="下注金额">' + data.body.list[i]
+                                                .betAmount + '</div>' +
+
+                                                '</div>'
+
+                                            )
+
+                                        }
+
+                                        break;
+
+                                }
+
+                            }
+
+                        }
+
+                    });
+
+                } else {
+
+                    $.ajax({
+
+                        url: "/api/Api/getThirdBetByUser?sess=" + sessionStorage.session +
+
+                            "&start_date=" + _start_type + "&end_date=" + _end_type,
+
+                        type: "GET",
+
+                        success: function (data) {
+
+                            var _each = $("[data-daily-table=1]").find('.tbody');
+
+                            var _length = data.body.list.length;
+
+                            if (data.status) {
+
+                                switch (data.status) {
+
+                                    case 100:
+
+                                        for (i = 0; i < _length; i++) {
+
+                                            _each.append(
+
+                                                '<div class="tr">' +
+
+                                                '<div class="td" data-title="日期">' + data.body.list[i].transactionTime +
+                                                '</div>' +
+
+                                                '<div class="td" data-title="游戏编号">' + data.body.list[i]
+                                                .gameCode + '</div>' +
+
+                                                '<div class="td" data-title="游戏类别">' + data.body.list[i]
+                                                .gameCategory + '</div>' +
+
+                                                '<div class="td" data-title="下注金额">' + data.body.list[i]
+                                                .betAmount + '</div>' +
+
+                                                '</div>'
+
+                                            )
+
+                                        }
 
                                         break;
 
@@ -653,6 +826,24 @@
                     });
 
                 }
+
+            }
+
+
+
+            $(window).load(function () {
+
+                cash_change();
+
+            });
+
+            $('.ajax-btn-cash-time').click(function () {
+
+                var _start = $('.jq-date-group-container').find('[name=from]').val();
+
+                var _end = $('.jq-date-group-container').find('[name=to]').val();
+
+                cash_change(_start, _end);
 
             });
         </script>
