--- a/Mobile/Member-Deposit.html
+++ b/Mobile/Member-Deposit.html
@@ -132,35 +132,244 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>充值</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue active">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <form class="container step1" action="">
+
+                            <div class="row">
+
+                                <div class="radio-group-container">
+
+                                    <p class="title">请选择充值渠道</p>
+
+                                    <div class="radio-group clear">
+
+                                        <label class="col-xs-12">
+
+                                            <input class="jq-input-radio" data-title="快捷支付" value="unionpay2" type="radio" name="paytype-1">
+
+                                            <span>快捷支付</span>
+
+                                        </label>
+
+                                        <label class="col-xs-12">
+
+                                            <input class="jq-input-radio" data-title="银联支付" value="unionpay3" type="radio" name="paytype-1">
+
+                                            <span>银联支付</span>
+
+                                        </label>
+
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">充值金额</p>
+
+                                    <div class="input-group">
+
+                                        <input type="number" min="1" name="amount-1" placeholder="请输入充值金额">
+
+                                        <span>* 單筆充值限額：最低
+
+                                            <span style="color:red;">50.00</span> 元，最高
+
+                                            <span style="color:red;">20000.00</span> 元 *
+
+                                        </span>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue step-btn1" type="button" value="下一步">
+
+                            </div>
+
+                        </form>
+
+                        <div class="container checkpay" style="display:none;">
+
+                            <div class="row">
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">用户名</p>
+
+                                    <p class="detail" id="_u_account">monsters</p>
+
+                                </div>
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">订单号码</p>
+
+                                    <p class="detail" id="_order_id">ct_bank2018116153339fe535a5fda8</p>
+
+                                </div>
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">支付渠道</p>
+
+                                    <p class="detail" id="_paytype">充提中心网银</p>
+
+                                </div>
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">充值金额</p>
+
+                                    <p class="detail">RMB
+
+                                        <span id="_amount" style="color:red; font-weight: bold;">5,000.00</span>
+
+                                    </p>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+                                <form action="" method="post" id="payfrm">
+                                    <input type="hidden" name="scode" value="">
+                                    <input type="hidden" name="orderid" value="">
+                                    <input type="hidden" name="paytype" value="">
+                                    <input type="hidden" name="amount" value="">
+                                    <input type="hidden" name="productname" value="充值">
+                                    <input type="hidden" name="currcode" value="CNY">
+                                    <input type="hidden" name="userid" value="">
+                                    <input type="hidden" name="memo" value="">
+                                    <input type="hidden" name="callbackurl" value="">
+                                    <input type="hidden" name="sign" value="">
+                                    <input class="btn btn-bg-blue" type="submit" value="确认支付">
+                                </form>
+
+                            </div>
+
+                        </div>
+
+
+                    </div>
 
                 </div>
 
@@ -551,59 +760,57 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
         <script>
             // Privity
 
-            $(window).load(function () {
+            $('.step-btn1').click(function () {
+                if ($('.jq-input-radio:checked').length == 0) {
+                    alert('请选择充值渠道');
+                    return false;
+                }
+
+                if ($('input[name=amount-1]').val() > 20000) {
+                    alert('單筆充值限額最高 200010元');
+                    return false;
+                }
+
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/getRechargeOrder?sess=" + sessionStorage.session,
 
-                    type: "GET",
+                    type: "POST",
+
+                    data: JSON.stringify({
+
+                        paytype: $('.jq-input-radio:checked').val(),
+
+                        amount: $('input[name=amount-1]').val()
+
+                    }),
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        if (data.status == '100') {
+                            console.log(data);
+                            $('#_u_account').html(data.body.u_account);
+                            $('#_order_id').html(data.body.orderid);
+                            $('#_paytype').html($('.jq-input-radio:checked').data('title'));
+                            $('#_amount').html(data.body.amount);
 
-                        var _length = data.body.list.length;
-
-                        if (data.status) {
-
-                            switch (data.status) {
-
-                                case 100:
-
-                                    for (i = 0; i < _length; i++) {
-
-                                        _each.append(
-
-                                            '<div class="col-xs-12">' +
-
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
-
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
-
-                                        )
-
-                                    }
-
-                                    break;
-
-                            }
+                            $('.step1').hide();
+                            $('.checkpay').show();
+                            $.each(data.body, function (i, e) {
+                                $('input[type=hidden][name=' + i + ']').val(e);
+                            });
+                            $('#payfrm').attr('action', data.body.pay_url);
+                        } else {
+                            alert(data.message);
 
                         }
 
@@ -611,50 +818,7 @@
 
                 });
 
-            });
-
-
-
-            $(document).on('click', '.ajax-game-link', function () {
-
-                var _key = $(this).attr('data-game-code');
-
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
-
-                    alert('请先登入会员');
-
-                } else {
-
-                    $.ajax({
-
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
-
-                        type: "GET",
-
-                        success: function (data) {
-
-                            if (data.status) {
-
-                                switch (data.status) {
-
-                                    case 100:
-
-                                        window.location.href = data.body.game_url;
-
-                                        break;
-
-                                }
-
-                            }
-
-                        }
-
-                    });
-
-                }
-
-            });
+            })
         </script>
 
     </div>
