--- a/Mobile/Member-Message.html
+++ b/Mobile/Member-Message.html
@@ -132,35 +132,149 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>银行卡管理</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue active">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container" action="">
+
+                            <div class="row btn-action" style="text-align: left;">
+
+                                <input class="btn btn-bg-blue jq-btn-message jq-cancelBubble" type="button" value="新增站内信">
+
+                            </div>
+
+                            <div class="row" style="border-bottom: none;">
+
+                                <div class="member-table jq-member-table">
+
+                                    <div class="thead">
+
+                                        <div class="tr">
+
+                                            <div class="th">主题</div>
+
+                                            <div class="th">操作</div>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tbody"></div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -551,23 +665,53 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
         <script>
             // Privity
 
+            var delete_key
+
+            $('[data-btn-true-false]').on('click', function () {
+
+                var key = $(this).attr('data-btn-true-false');
+
+                if (key == 'true') {
+
+                    delete_key.parents('.tr').remove();
+
+                    $('.jq-pop-window').removeClass('active');
+
+                    $('.jq-pop-true-false').removeClass('active');
+
+                } else {
+
+                    $('.jq-pop-window').removeClass('active');
+
+                    $('.jq-pop-true-false').removeClass('active');
+
+                };
+
+            });
+
+
+
             $(window).load(function () {
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/getUserMessageList?sess=" + sessionStorage.session +
+
+                        "&p=1$limit=5",
 
                     type: "GET",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        var _each = $(".jq-member-table").find('.tbody');
 
                         var _length = data.body.list.length;
 
@@ -581,19 +725,23 @@
 
                                         _each.append(
 
-                                            '<div class="col-xs-12">' +
+                                            '<div class="tr">' +
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
+                                            '<div class="td" data-title="主题">' +
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
+                                            '<a href="javascript:void(0)" class="jq-btn-message-view" style="text-decoration: underline;" data-um-id="' +
 
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
+                                            data.body.list[i].um_id + '">' + data.body.list[i].um_title +
 
                                             '</a>' +
+
+                                            '</div>' +
+
+                                            '<div class="td td-action" data-title="操作">' +
+
+                                            '<a href="javascript:void(0)" class="jq-btn-message-delete" style="border-right: 0; padding-right: 0; margin-right: 0;">删除</a>' +
+
+                                            '</div>' +
 
                                             '</div>'
 
@@ -613,24 +761,93 @@
 
             });
 
+            $(document).on('click', '.jq-btn-message-view', function () {
 
+                var key = $(this).attr('data-um-id');
 
-            $(document).on('click', '.ajax-game-link', function () {
+                $.ajax({
 
-                var _key = $(this).attr('data-game-code');
+                    url: "/api/Api/getUserMessage?sess=" + sessionStorage.session,
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                    type: "POST",
 
-                    alert('请先登入会员');
+                    data: JSON.stringify({
 
-                } else {
+                        um_id: key,
+
+                    }),
+
+                    success: function (data) {
+
+                        var _each = $(".jq-pop-message-view").find('.form-group');
+
+                        if (data.status) {
+
+                            switch (data.status) {
+
+                                case 100:
+
+                                    _each.append(
+
+                                        '<div class="row">' +
+
+                                        '<p class="title">寄件人</p>' +
+
+                                        '<p class="detail">' + data.body.row.u_account + '</p>' +
+
+                                        '</div>' +
+
+                                        '<div class="row">' +
+
+                                        '<p class="title">讯息</p>' +
+
+                                        '<p class="detail">' + data.body.row.um_content +
+
+                                        '</p>' +
+
+                                        '</div>'
+
+                                    )
+
+                                    break;
+
+                            }
+
+                        }
+
+                    }
+
+                });
+
+            })
+
+            $('.ajax-btn-message-submit').click(function () {
+
+                var _message_type = $('[name=message-type]').val();
+
+                var _message_name = $('[name=message-name]').val();
+
+                var _message_title = $('[name=message-title]').val();
+
+                var _message_content = $('[name=message-content]').val();
+
+                if (_message_type == 'up') {
 
                     $.ajax({
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                        url: "/api/Api/sendSuperiorUserMessage?sess=" +
 
-                        type: "GET",
+                            sessionStorage.session,
+
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            title: _message_title,
+
+                            content: _message_content
+
+                        }),
 
                         success: function (data) {
 
@@ -640,9 +857,103 @@
 
                                     case 100:
 
-                                        window.location.href = data.body.game_url;
+                                        alert('发送成功');
 
                                         break;
+
+                                    case '999':
+
+                                        alert(data.message);
+
+                                }
+
+                            }
+
+                        }
+
+                    });
+
+                } else if (_message_type == 'all-down') {
+
+                    $.ajax({
+
+                        url: "/api/Api/sendSubordinateUserMessage?sess=" +
+
+                            sessionStorage.session,
+
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            send_all_subordinate: 1,
+
+                            title: _message_title,
+
+                            content: _message_content
+
+                        }),
+
+                        success: function (data) {
+
+                            if (data.status) {
+
+                                switch (data.status) {
+
+                                    case 100:
+
+                                        alert('发送成功');
+
+                                        break;
+
+                                    case '999':
+
+                                        alert(data.message);
+
+                                }
+
+                            }
+
+                        }
+
+                    });
+
+                } else if (_message_type == 'down') {
+
+                    $.ajax({
+
+                        url: "/api/Api/sendSubordinateUserMessage?sess=" +
+
+                            sessionStorage.session,
+
+                        type: "POST",
+
+                        data: JSON.stringify({
+
+                            account: _message_name,
+
+                            send_all_subordinate: 0,
+
+                            title: _message_title,
+
+                            content: _message_content
+
+                        }),
+
+                        success: function (data) {
+
+                            if (data.status) {
+
+                                switch (data.status) {
+
+                                    case 100:
+
+                                        alert('发送成功');
+
+                                        break;
+
+                                    case '999':
+
+                                        alert(data.message);
 
                                 }
 
@@ -654,7 +965,7 @@
 
                 }
 
-            });
+            })
         </script>
 
     </div>
