--- a/Mobile/Member-Register.html
+++ b/Mobile/Member-Register.html
@@ -132,35 +132,147 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>银行卡管理</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
+
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue active">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container" action="">
+
+                            <div class="row btn-action" style="text-align: left;">
+
+                                <input class="btn btn-bg-blue jq-btn-addregister jq-cancelBubble" type="button" value="新增邀请码">
+
+                            </div>
+
+                            <div class="row" style="border-bottom: none;">
+
+                                <div class="member-table jq-member-table">
+
+                                    <div class="thead">
+
+                                        <div class="tr">
+
+                                            <div class="th">邀请码列表</div>
+
+                                        </div>
+
+                                    </div>
+
+                                    <div class="tbody"></div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -551,6 +663,8 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
@@ -561,13 +675,13 @@
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/getRegisteredLink?sess=" + sessionStorage.session,
 
-                    type: "GET",
+                    type: "POST",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        var _each = $(".jq-member-table").find('.tbody');
 
                         var _length = data.body.list.length;
 
@@ -581,19 +695,11 @@
 
                                         _each.append(
 
-                                            '<div class="col-xs-12">' +
+                                            '<div class="tr">' +
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
+                                            '<div class="td" data-title="邀请码">' + data.body.list[
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
+                                                i].rl_id + '</div>' +
 
                                             '</div>'
 
@@ -613,46 +719,37 @@
 
             });
 
+            $('.jq-btn-addregister').click(function () {
 
+                $.ajax({
 
-            $(document).on('click', '.ajax-game-link', function () {
+                    url: "/api/Api/addRegisteredLink?sess=" + sessionStorage.session,
 
-                var _key = $(this).attr('data-game-code');
+                    type: "POST",
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                    success: function (data) {
 
-                    alert('请先登入会员');
+                        console.log(data)
 
-                } else {
+                        if (data.status) {
 
-                    $.ajax({
+                            switch (data.status) {
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
+                                case 100:
 
-                        type: "GET",
+                                    alert(data.message);
 
-                        success: function (data) {
+                                    window.location.reload();
 
-                            if (data.status) {
-
-                                switch (data.status) {
-
-                                    case 100:
-
-                                        window.location.href = data.body.game_url;
-
-                                        break;
-
-                                }
+                                    break;
 
                             }
 
                         }
 
-                    });
+                    }
 
-                }
+                });
 
             });
         </script>
