--- a/Mobile/Member-Withdrawal.html
+++ b/Mobile/Member-Withdrawal.html
@@ -132,37 +132,207 @@
 
         <main>
 
-            <section class="owl-carousel owl-theme owl-banner">
+            <section class="sect-nav">
 
-                <div class="item">
+                <div class="container clear">
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <i class="icon-ic-home"></i>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
 
-                </div>
+                        <p>会员中心</p>
 
-                <div class="item">
+                    </div>
 
-                    <img src="img/banner1.png" alt="">
+                    <div class="row">
+
+                        <p>提款</p>
+
+                    </div>
 
                 </div>
 
             </section>
 
-            <section class="sect-game-list jq-sect-game-list">
+            <section class="sect-member-detail">
 
                 <div class="container">
 
-                    <p class="title">热门游戏推荐</p>
+                    <ul class="member-action-list jq-member-action-list clear">
 
-                    <div class="list-group clear"></div>
+                        <li>会员中心</li>
 
-                </div>
+                        <li>
+
+                            <a href="Member-Deposit.html" class="btn btn-solid-blue">充值</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Withdrawal.html" class="btn btn-solid-blue active">提款</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Transfer.html" class="btn btn-solid-blue">转帐</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-DailyRecord.html" class="btn btn-solid-blue">日常纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CashRecord.html" class="btn btn-solid-blue">投注纪录</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Balance.html" class="btn btn-solid-blue">余额查询</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Discount.html" class="btn btn-solid-blue">优惠讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Apply-Discount.html" class="btn btn-solid-blue">申请优惠</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Message.html" class="btn btn-solid-blue">站内讯息</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Register.html" class="btn btn-solid-blue">邀请码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-Password.html" class="btn btn-solid-blue">密码管理</a>
+
+                        </li>
+
+                        <li>
+
+                            <a href="Member-CardManagement.html" class="btn btn-solid-blue">银行卡管理</a>
+
+                        </li>
+
+                    </ul>
+
+                    <div class="member-detail">
+
+                        <div class="container jq-container-step1">
+
+                            <div class="row">
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">请输入资金密码</p>
+
+                                    <div class="input-group">
+
+                                        <input type="password" name="cashpassword" placeholder="请输入资金密码">
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue ajax-cashpassword-submit" type="button" value="提交">
+
+                            </div>
+
+                        </div>
+
+                        <div class="container jq-container-step2" style="display: none;">
+
+                            <div class="row">
+
+                                <div class="select-group-container clear">
+
+                                    <p class="title">收款银行卡</p>
+
+                                    <div class="select-group">
+
+                                        <select class="select" name="bankcard-list"></select>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">用户名</p>
+
+                                    <p class="detail jq-user-nam"></p>
+
+                                </div>
+
+                                <div class="confirm-group-container clear">
+
+                                    <p class="title">可提款金额</p>
+
+                                    <p class="detail jq-balance-num"></p>
+
+                                </div>
+
+                                <div class="input-group-container clear">
+
+                                    <p class="title">提款金额</p>
+
+                                    <div class="input-group">
+
+                                        <input type="text" class="jq-cash-num" placeholder="请输入取款金额...">
+
+                                        <span>单笔最低提现金额：
+
+                                            <span style="color:red;">100</span> 元，最高
+
+                                            <span style="color:red;">50000</span> 元
+
+                                        </span>
+
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="row btn-action">
+
+                                <input class="btn btn-bg-blue jq-btn-withdrawal-submit" type="button" value="确认取款">
+
+                            </div>
+
+                            </form>
+
+                        </div>
+
+                    </div>
 
             </section>
 
@@ -551,25 +721,27 @@
         <script>
             Live.Global.intital();
 
+            Live.Global.member();
+
             Live.Global.owl_banner();
         </script>
 
         <script>
             // Privity
 
-            $(window).load(function () {
+            function Balance_inform() {
 
                 $.ajax({
 
-                    url: "/api/Api/getGameList?game_type=RNG&p=1&limit=9999&platform=html5&client_type=web",
+                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
 
                     type: "GET",
 
                     success: function (data) {
 
-                        var _each = $(".jq-sect-game-list").find('.list-group');
+                        var _each = $(".jq-container-step2").find('[name=bankcard-list]');
 
-                        var _length = data.body.list.length;
+                        var _length = data.body.list.user_bank.length;
 
                         if (data.status) {
 
@@ -581,21 +753,11 @@
 
                                         _each.append(
 
-                                            '<div class="col-xs-12">' +
+                                            '<option value="' + data.body.list.user_bank[i].ub_id +
 
-                                            '<a href="javascript:void(0)" class="ajax-game-link" data-game-code="' +
-                                            data.body.list[i].tcgGameCode + '">' +
+                                            '">' + data.body.list.user_bank[i].ub_branch_name + '-' +
 
-                                            '<img class="img" src="http://images.uxgaming.com/TCG_GAME_ICONS/' +
-                                            data.body.list[i].productCode + '/' + data.body.list[
-                                                i].tcgGameCode + '.png" alt="">' +
-
-                                            '<p class="title">' + data.body.list[i].gameName +
-                                            '</p>' +
-
-                                            '</a>' +
-
-                                            '</div>'
+                                            data.body.list.user_bank[i].ub_account + '</option>'
 
                                         )
 
@@ -611,53 +773,216 @@
 
                 });
 
-            });
+                $.ajax({
 
+                    url: "/api/Api/getUser?sess=" + sessionStorage.session,
 
+                    type: "GET",
 
-            $(document).on('click', '.ajax-game-link', function () {
+                    success: function (data) {
 
-                var _key = $(this).attr('data-game-code');
+                        if (data.status) {
 
-                if (sessionStorage.session == undefined || sessionStorage.session == '') {
+                            switch (data.status) {
 
-                    alert('请先登入会员');
+                                case 100:
 
-                } else {
+                                    var _each = $(".jq-container-step2").find('.jq-user-nam');
 
-                    $.ajax({
+                                    _each.html(data.body.user.u_name);
 
-                        url: "/api/Api/getGameUrl?sess=" + sessionStorage.session + "&game_code=" +
-                            _key + "&platform=html5",
-
-                        type: "GET",
-
-                        success: function (data) {
-
-                            if (data.status) {
-
-                                switch (data.status) {
-
-                                    case 100:
-
-                                        window.location.href = data.body.game_url;
-
-                                        break;
-
-                                }
+                                    break;
 
                             }
 
                         }
 
-                    });
+                    }
+
+                });
+
+                $.ajax({
+
+                    url: "/api/Api/withdrawalForm?sess=" + sessionStorage.session,
+
+                    type: "GET",
+
+                    success: function (data) {
+
+                        if (data.status) {
+
+                            switch (data.status) {
+
+                                case 100:
+
+                                    var _each = $(".jq-container-step2").find('.jq-balance-num');
+
+                                    _each.html(data.body.balance);
+
+                                    break;
+
+                            }
+
+                        }
+
+                    }
+
+                });
+
+            }
+
+
+
+            $('.jq-btn-withdrawal-submit').click(function () {
+
+                var _bank_key = $(".jq-container-step2").find('[name=bankcard-list]').val();
+
+                var _balance_key = $(".jq-container-step2").find('.jq-balance-num').html();
+
+                var _cash_key = $(".jq-container-step2").find('.jq-cash-num').val();
+
+                console.log(_cash_key);
+
+                if (_cash_key >= 100 && _cash_key <= 50000) {
+
+                    if (_cash_key <= _balance_key) {
+
+                        $.ajax({
+
+                            url: "/api/Api/withdrawal?sess=" + sessionStorage.session,
+
+                            type: "POST",
+
+                            data: JSON.stringify({
+
+                                quota: _cash_key,
+
+                                ub_id: _bank_key
+
+                            }),
+
+                            success: function (data) {
+
+                                if (data.status) {
+
+                                    switch (data.status) {
+
+                                        case 100:
+
+                                            alert('取款成功');
+
+                                            window.location.reload();
+
+                                            break;
+
+                                        case '999':
+
+                                            alert(data.message);
+
+                                    }
+
+                                }
+
+                            }
+
+                        });
+
+                    }
+
+                } else {
+
+                    alert('单笔最低提现金额： 100 元，最高 50000 元');
 
                 }
 
             });
+
+
+
+            // CashCheck
+
+            function cashpassword_check(_passwd) {
+
+                $.ajax({
+
+                    url: "/api/Api/checkMoneyPasswd?sess=" + sessionStorage.session,
+
+                    type: "POST",
+
+                    data: JSON.stringify({
+
+                        passwd: _passwd,
+
+                    }),
+
+                    success: function (data) {
+
+                        if (data.status) {
+
+                            switch (data.status) {
+
+                                case 100:
+
+                                    alert('驗證成功');
+
+                                    $('.jq-container-step1').hide();
+
+                                    $('.jq-container-step2').show();
+
+                                    break;
+
+                                case '999':
+
+                                    alert('密碼驗證失敗，請重新輸入');
+
+                            }
+
+                        }
+
+                    }
+
+                });
+
+            };
+
+
+
+            $(window).load(function () {
+
+                $.ajax({
+
+                    url: "/api/Api/UserMoneyPasswd?sess=" + sessionStorage.session,
+
+                    type: "GET",
+
+                    success: function (data) {
+
+                        if (data.body.isSet == 0) {
+
+                            $('.jq-pop-window').addClass('active');
+
+                            $('.jq-pop-cash-password').addClass('active');
+
+                        }
+
+                    }
+
+                });
+
+            });
+
+            $('.ajax-cashpassword-submit').click(function () {
+
+                var cash_key = $('[name=cashpassword]').val();
+
+                cashpassword_check(cash_key);
+
+                Balance_inform();
+
+            });
         </script>
 
-    </div>
+        </div>
 
 </body>
 
